--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -60,8 +60,10 @@ select {
   padding: 5px 5px;
   cursor: pointer;
 }
-/* .buyHeading {
-} */
+.buyHeading {
+  width: 25%;
+}
+
 .tableImage {
   text-align: start;
 }
@@ -90,4 +92,26 @@ select {
 .headingArrow i {
   display: block;
   height: 6px;
+}
+.tableBuy {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  margin-top: 23px;
+}
+.quantity input {
+  background-color: #e0e0e0;
+  color: #000;
+  width: 50px;
+  border: none;
+  text-align: center;
+}
+.cartIcon {
+  color: white;
+  background: #000;
+  padding: 0px 15px;
+  margin: 0px 5px;
+}
+.checkBox {
+  padding-right: 10px;
 }
